syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/vbulash/auth/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
    version: "1.0.0"
    contact: {
      name: "Валерий Булаш"
      email: "vbulash@yandex.ru"
    };
  };

  host: "localhost:8000",
  schemes: HTTP,
  consumes: "application/json",
  produces: "application/json",
};

service AuthV1 {
  // Создание нового пользователя
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  };

  // Получение пользователя
  rpc Get(GetRequest) returns (GetResponse) {
    option (google.api.http) = {
      get: "/user/v1"
    };
  };

  // Обновление пользователя
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  };

  // Удаление пользователя
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user/v1"
    };
  };
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message UserInfo {
  // Имя пользователя
  string name = 1 [(validate.rules).string.min_len = 1];
  // Электронная почта пользователя
  string email = 2 [(validate.rules).string = {min_len: 1, email: true}];
  // Пароль пользователя
  string password = 3;
  // Роль пользователя
  Role role = 4;
}

message User {
  // ID пользователя
  int64 id = 1;
  UserInfo info = 2;
  // Timestamp создания
  google.protobuf.Timestamp created_at = 3;
  // Timestamp обновления
  google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
  // Имя пользователя
  string name = 1 [(validate.rules).string.min_len = 1];
  // Электронная почта пользователя
  string email = 2 [(validate.rules).string = {min_len: 1, email: true}];
  // Пароль пользователя
  string password = 3;
  // Подтверждение пароля
  string password_confirm = 4;
  // Роль пользователя
  Role role = 5;
}
message CreateResponse {
  // ID пользователя
  int64 id = 1;
}

message GetRequest {
  // ID пользователя
  int64 id = 1;
}

message GetResponse {
  // ID пользователя
  int64 id = 1;
  // Имя пользователя
  string name = 2;
  // Электронная почта пользователя
  string email = 3;
  // Роль пользователя
  Role role = 4;
  // Timestamp создания
  google.protobuf.Timestamp created_at = 5;
  // Timestamp обновления
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  // ID пользователя
  int64 id = 1;
  // Имя пользователя
  google.protobuf.StringValue name = 2;
  // Электронная почта пользователя
  google.protobuf.StringValue email = 3 [(validate.rules).string = {min_len: 1, email: true}];
  // Роль пользователя
  Role role = 4;
}

message DeleteRequest {
  // ID пользователя
  int64 id = 1;
}
